@@ -5,7 +5,7 @@ import com.example.mdmggreal.global.exception.ErrorCode;
 import com.example.mdmggreal.global.security.JwtUtil;
 import com.example.mdmggreal.hashtag.entity.Hashtag;
 import com.example.mdmggreal.hashtag.repository.HashtagRepository;
-import com.example.mdmggreal.hashtag.repository.HashtagRepositoryImpl;
+import com.example.mdmggreal.hashtag.repository.HashtagQueryRepository;
 import com.example.mdmggreal.ingameinfo.dto.response.InGameInfoResponse;
 import com.example.mdmggreal.ingameinfo.entity.InGameInfo;
 import com.example.mdmggreal.ingameinfo.repository.InGameInfoRepository;
@@ -17,19 +17,19 @@ import com.example.mdmggreal.post.dto.request.PostAddRequest;
 import com.example.mdmggreal.post.entity.Post;
 import com.example.mdmggreal.post.entity.type.VideoType;
 import com.example.mdmggreal.post.repository.PostRepository;
-import com.example.mdmggreal.post.repository.PostRepositoryImpl;
+import com.example.mdmggreal.post.repository.PostQueryRepository;
 import com.example.mdmggreal.posthashtag.entity.PostHashtag;
 import com.example.mdmggreal.posthashtag.repository.PostHashtagRepository;
 import com.example.mdmggreal.s3.service.S3Service;
-import com.example.mdmggreal.vote.repository.VoteRepositoryImpl;
+import com.example.mdmggreal.vote.repository.VoteQueryRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -39,10 +39,10 @@ public class PostService {
     private final S3Service s3Service;
     private final InGameInfoRepository inGameInfoRepository;
     private final PostHashtagRepository postHashtagRepository;
-    private final HashtagRepositoryImpl hashtagRepositoryImpl;
+    private final HashtagQueryRepository hashtagQueryRepository;
     private final MemberRepository memberRepository;
-    private final PostRepositoryImpl postRepositoryImpl;
-    private final VoteRepositoryImpl voteRepositoryImpl;
+    private final PostQueryRepository postQueryRepository;
+    private final VoteQueryRepository voteQueryRepository;
     private final HashtagRepository hashtagRepository;
 
     @Transactional
@@ -66,82 +66,31 @@ public class PostService {
     @Transactional
     public PostDTO getPost(Long postId, String token) {
         Post post = getPostById(postId);
-        Member member = post.getMember();
         post.addView();
-
-        List<Hashtag> hashtags = hashtagRepositoryImpl.getListHashtagByPostId(post.getId());
-        List<InGameInfoResponse> inGameInfoResponses = inGameInfoRepository.findByPostId(postId).stream().map(InGameInfoResponse::of).toList();
-        boolean isVote = false;
-        if (token != null) {
-            String mobile = JwtUtil.getMobile(token);
-            Member loginMember = getMember(mobile);
-            isVote = voteRepositoryImpl.existsVoteByMemberId(post.getId(), loginMember.getId());
-        }
-
-        return PostDTO.of(MemberDTO.from(member), post, hashtags, inGameInfoResponses, isVote);
+        return createPostDTO(post, token);
     }
 
     public List<PostDTO> getPostsOrderByCreatedDateTime(String token, String orderBy, String keyword) {
-        List<Post> posts = postRepositoryImpl.getPostList(orderBy, keyword);
-        List<PostDTO> postDTOS = new ArrayList<>();
-
-
-        posts.forEach(post -> {
-            MemberDTO member = MemberDTO.from(post.getMember());
-            List<Hashtag> listHashtagByPostId = hashtagRepositoryImpl.getListHashtagByPostId(post.getId());
-            boolean isVote = false;
-            List<InGameInfoResponse> inGameInfoResponses = inGameInfoRepository.findByPostId(post.getId()).stream()
-                    .map(InGameInfoResponse::of).toList();
-
-            if (token != null) {
-                String mobile = JwtUtil.getMobile(token);
-                Member loginMember = getMember(mobile);
-                isVote = voteRepositoryImpl.existsVoteByMemberId(post.getId(), loginMember.getId());
-            }
-
-            postDTOS.add(PostDTO.of(member, post, listHashtagByPostId, inGameInfoResponses, isVote));
-        });
-
-        return postDTOS;
+        List<Post> posts = postQueryRepository.getPostList(orderBy, keyword);
+        return posts.stream().map(post -> createPostDTO(post, token)).collect(Collectors.toList());
     }
 
     public List<PostDTO> getPostsByMember(String mobile) {
         Member loginMember = getMember(mobile);
-        List<Post> posts = postRepositoryImpl.getPostsMember(loginMember.getId());
-        List<PostDTO> postDTOS = new ArrayList<>();
-
-        posts.forEach(post -> {
-            List<InGameInfoResponse> inGameInfoResponses = inGameInfoRepository.findByPostId(post.getId()).stream().map(InGameInfoResponse::of).toList();
-            MemberDTO member = MemberDTO.from(post.getMember());
-            List<Hashtag> listHashtagByPostId = hashtagRepositoryImpl.getListHashtagByPostId(post.getId());
-            boolean isVote = voteRepositoryImpl.existsVoteByMemberId(post.getId(), loginMember.getId());
-            postDTOS.add(PostDTO.of(member, post, listHashtagByPostId, inGameInfoResponses, isVote));
-        });
-
-        return postDTOS;
+        List<Post> posts = postQueryRepository.getPostsMember(loginMember.getId());
+        return posts.stream().map(post -> createPostDTO(post, loginMember.getMobile())).collect(Collectors.toList());
     }
 
-    public List<PostDTO> getPostsKeyword(String token, String keyWord) {
-        List<Post> posts = postRepositoryImpl.getPostsKeyword(keyWord);
-        List<PostDTO> postDTOS = new ArrayList<>();
-
-        posts.forEach(post -> {
-            MemberDTO from = MemberDTO.from(post.getMember());
-            List<Hashtag> listHashtagByPostId = hashtagRepositoryImpl.getListHashtagByPostId(post.getId());
-            boolean isVote = false;
-            List<InGameInfoResponse> inGameInfoResponses = inGameInfoRepository.findByPostId(post.getId()).stream().map(InGameInfoResponse::of).toList();
-
-            if (token != null) {
-
-                String mobile = JwtUtil.getMobile(token);
-                Member loginMember = getMember(mobile);
-                isVote = voteRepositoryImpl.existsVoteByMemberId(post.getId(), loginMember.getId());
-            }
-
-            postDTOS.add(PostDTO.of(from, post, listHashtagByPostId, inGameInfoResponses, isVote));
-        });
-
-        return postDTOS;
+    private PostDTO createPostDTO(Post post, String token) {
+        boolean isVote = false;
+        if (token != null) {
+            String mobile = JwtUtil.getMobile(token);
+            Member loginMember = getMember(mobile);
+            isVote = voteQueryRepository.existsVoteByMemberId(post.getId(), loginMember.getId());
+        }
+        List<Hashtag> hashtags = hashtagQueryRepository.getListHashtagByPostId(post.getId());
+        List<InGameInfoResponse> inGameInfoResponses = inGameInfoRepository.findByPostId(post.getId()).stream().map(InGameInfoResponse::of).collect(Collectors.toList());
+        return PostDTO.of(MemberDTO.from(post.getMember()), post, hashtags, inGameInfoResponses, isVote);
     }
 
     private Post getPostById(Long postId) {
